Refactor for compatibility and improve linting
- Replace Java 21 `SequencedCollection` methods (`getFirst()`, `removeFirst()`) with standard `List` access for better compatibility.
- Update layouts in `filepicker` to use `app:tint` for backward-compatible drawable tinting.
- Enable lint checking for library modules and check dependencies in the app module.
- Add `@NonNull` annotations and `final` modifiers to various model and entity classes.
- Refactor `DefaultBackupManager` to ensure UI updates occur consistently.
- Apply minor logic fixes and lambda simplifications across installer and backup components.